--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <h3>Built for Apple Intelligence</h3>
     </div>
     <div class="cantainer-third">
-      <h1>MacBook Pro</h1>
+      <h1>ipad Pro</h1>
       <h2>A work of smart</h2>
       <div class="buttons">
         <button class="first-button">Learn more</button>
@@ -483,6 +483,27 @@
             <li>Gift Cards</li>
           </ul>
         </div>
+      </div>
+      <div class="first-display">
+        <h3>Shop and Learn</h3>
+        <ul>
+          <li>Store</li>
+          <li>Mac</li>
+          <li>iPad</li>
+          <li>iPhone</li>
+          <li>Watch</li>
+          <li>Vision</li>
+          <li>AirPods</li>
+          <li>TV & Home</li>
+          <li>AirTag</li>
+          <li>Accessories</li>
+          <li>Gift Cards</li>
+          <h2>Apple Wallet</h2>
+          <li>Wallet</li>
+          <li>Apple Card</li>
+          <li>Apple Pay</li>
+          <li>Apple Cash</li>
+        </ul>
       </div>
       <div class="footer-bottum">
         <h2>More ways to shop:</h2>
